# MatteMEG

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: MMUtils.h  PatchHeader.hpp  RunHeader.hpp  XecHeader.hpp
macros/: ReadRun.cpp  makeRunList.C
macros/trg/: .DMEfficiency.C.swp  .ShowEvent.C.swp  .readDMEff.C.swp  DMEfficiency.C  DMEfficiencyRadius.C  DMEfficiency_noOnline.C  DMEfficiency_noTRG.C  DMGamma.C  DMSmearing.C  DMTimeStamp.C  MC2DMTable.C  PatchDist.C  RADvsEFF.C  ShowEvent.C  ShowXEC.C  TileDist.C  TileOffOn.C  freqLUT.C  readDMEff.C  testPedestal.C
macros/xec/: CexMapPatch.cpp  UVScan.C  XECBGOTiming.C
outfiles/: UVDist.root  UVPatch.root  distill_dm21_MC001.root  distill_dm21_MC002.root  distill_dm21_nar001.root  distill_dm21_nar002.root  distill_dm21_nar003.root  distill_dm21_rad2_nar001.root  distill_dm21_wide001.root  distill_dm21_wide002.root  dm21_dummy.root  dm21_dummy_prio.root  dm21_full1R0.root  dm21_full1R0_prio.root  dm21_full1R0_unb.root  dm21_full1R0sm.root  dm21_full1R0sm_prio.root  dm21_full1R0sm_unb.root  dm21_full1R25.root  dm21_full1R25_prio.root  dm21_full1R25_unb.root  dm21_full1R25sm.root  dm21_full1R25sm_prio.root  dm21_full1R25sm_unb.root  dm21_full1R5.root  dm21_full1R5_prio.root  dm21_full1R5_unb.root  dm21_full1R5sm.root  dm21_full1R5sm_prio.root  dm21_full1R5sm_unb.root  dm21_full1R75.root  dm21_full1R75_prio.root  dm21_full1R75_unb.root  dm21_full1R75sm.root  dm21_full1R75sm_prio.root  dm21_full1R75sm_unb.root  dm21_full2R0.root  dm21_full2R0_prio.root  dm21_full2R0_unb.root  dm21_full2R0sm.root  (+77 more)
src/: MMUtils.C  PatchHeader.cpp  RunHeader.cpp  XecHeader.cpp
